---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1070                                 -
---------------------------------------------
- 2021-01-23                                -
---------------------------------------------
.: WSM: Task: Show monthly sales (WSM-271)

---------------------------------------------
- 2021-01-14                                -
---------------------------------------------
.: WSM: BugFix: Upload images in mobile size (WSM-286)

---------------------------------------------
- 2021-01-10                                -
---------------------------------------------
.: WSM: Task: Create an invoice link for merchant to copy (WSM-285)

- v1.0.1062                                 -
---------------------------------------------
- 2021-01-09                                -
---------------------------------------------
.: WSM: BugFix: Add payment method when invoice mark as completed (WSM-287)
.: WSM: BugFix: Set Title - invoice (WSM-288)

- v1.0.1061                                 -
---------------------------------------------
- 2021-01-08                                -
---------------------------------------------
.: WSM: Task: Add completed date for invoice (WSM-283)

---------------------------------------------
- 2021-01-07                                -
---------------------------------------------
.: WSM: BugFix: Upload multiple banners slow issue (WSM-275)

---------------------------------------------
- 2021-01-06                                -
---------------------------------------------
.: WSM: BugFix: When item type price is 0, should set the price to 0 (WSM-276)
.: WSM: Task: Able to not enter ETA time if not confirmed yet (WSM-277)

---------------------------------------------
- 2021-01-05                                -
---------------------------------------------