@@ -3,7 +3,7 @@
     <mat-option value="general">General</mat-option>
     <mat-option value="sales">Sales</mat-option>
     <mat-option value="pageview">Pageview</mat-option>
-    <!-- <mat-option value="deliveryFee">Delivery Fee</mat-option> -->
+    <mat-option value="delivery">Delivery</mat-option>
     <!-- <mat-option value="invoice">Invoice</mat-option> -->
 </mat-select>
 <router-outlet></router-outlet>
