@@ -1,0 +1,61 @@
+.delivery-figure-container {
+    margin-bottom: 1rem;
+
+    .delivery-figure__label {
+        font-size: .9rem;
+        margin-bottom: 0;
+        margin-right: 1rem;
+    }
+
+    .delivery-figure {
+        display: block;
+        position: relative;
+        width: 100%;
+        background-color: #f7f7f7;
+        border-radius: 5px;
+        padding: 1rem;
+    }
+
+    .delivery-figure__today {
+        background-color: rgba(127, 0, 0, 0.1);
+
+        .delivery-figure__today__figure {
+            font-size: 2rem;
+            padding-left: 1rem;
+            display: block;
+            color: #b71c1c;
+            text-align: right;
+        }
+    }
+
+    .delivery-figure__analyzer {
+        background-color: #fff;
+        width: 100%;
+        display: block;
+        height: 300px;
+    }
+
+    .delivery-figure__analyzer__overlay {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: rgba(255, 255, 255, .7);
+        z-index: 1;
+
+        .delivery-figure__analyzer__overlay-spinner {
+            position: absolute;
+            top: calc(50% - 30px);
+            left: calc(50% - 30px);
+        }
+
+        .delivery-figure__analyzer__unavailble-label {
+            position: absolute;
+            top: calc(50% - 10.5px);
+            left: calc(50% - 115px);
+            margin-bottom: 0;
+            font-size: .9rem;
+        }
+    }
+}
