@@ -1,4 +1,4 @@
-<div class="row no-gutters py-4 col-9 center">
+<div class="row no-gutters py-lg-4 px-0 col-lg-9 center mb-5">
     <div class="col-sm-6 p-2">
         <div class="analysis-card">
             <h5 class="analysis-header">Sales</h5>
@@ -39,16 +39,16 @@
             </div>
         </div>
     </div>
-    <div *ngIf="false" class="col-sm-6 p-2">
+    <div class="col-sm-6 p-2">
         <div class="analysis-card">
-            <h5 class="analysis-header">Delivery Fee</h5>
+            <h5 class="analysis-header">Delivery</h5>
             <div>
                 <h6 class="analysis-title">Total monthly delivery fee:</h6>
-                <p class="analysis-main-value"><span class="analysis-currency">RM</span><span>{{ analysis.totalDeliveryFee | number: '1.2-2' }}</span></p>
+                <p class="analysis-main-value"><span class="analysis-currency">RM</span><span #deliveryFigureRef>{{ analysis.totalMonthlyDelivery | number: '1.2-2' }}</span></p>
             </div>
             <div>
                 <h6 class="analysis-subtitle">Last month delivery fee:</h6>
-                <p class="analysis-value"><span class="analysis-currency">RM</span><span>{{ analysis.lastMonthDeliveryFee | number: '1.2-2' }}</span></p>
+                <p class="analysis-value"><span class="analysis-currency">RM</span><span>{{ analysis.lastMonthDelivery | number: '1.2-2' }}</span></p>
             </div>
             <div *ngIf="loading.isRunning()" class="anlysis-overlay">
                 <ws-spinner [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>
