@@ -15,6 +15,7 @@ import { delay, finalize, switchMap, takeUntil } from 'rxjs/operators';
 export class GeneralFigureComponent implements OnInit {
   @ViewChild('salesFigureRef', { static: true }) salesFigureRef: ElementRef;
   @ViewChild('pageViewFigureRef', { static: true }) pageViewFigureRef: ElementRef;
+  @ViewChild('deliveryFigureRef', { static: true }) deliveryFigureRef: ElementRef;
   REFRESH_INTERVAL = 10 * 1000;
   analysis = {
     totalMonthlySales: 0,
@@ -23,8 +24,8 @@ export class GeneralFigureComponent implements OnInit {
     totalPageview: 0,
     currentMonthPageview: 0,
     lastMonthPageview: 0,
-    totalDeliveryFee: 0,
-    lastMonthDeliveryFee: 0,
+    totalMonthlyDelivery: 0,
+    lastMonthDelivery: 0,
     totalMonthlyInvoices: 0,
     lastMonthInvoices: 0
   }
@@ -53,6 +54,7 @@ export class GeneralFigureComponent implements OnInit {
       this.analysis = result['result'];
       this.authAnalysisContributorService.increment(this.salesFigureRef.nativeElement, 500, this.analysis.totalMonthlySales, true);
       this.authAnalysisContributorService.increment(this.pageViewFigureRef.nativeElement, 500, this.analysis.totalPageview);
+      this.authAnalysisContributorService.increment(this.deliveryFigureRef.nativeElement, 500, this.analysis.totalMonthlyDelivery);
       this.loading.stop();
     });
   }
