@@ -1,5 +1,5 @@
 <div class="tracking-figure-container">
-    <div class="row no-gutters mb-lg-4 mb-2">
+    <div class="row no-gutters mb-lg-4 mb-3">
         <div class="col-lg-3 col">
             <div class="tracking-figure tracking-figure__today">
                 <h4 class="h6 mb-0 font-weight-normal" style="min-width: 200px">
