@@ -1,6 +1,6 @@
 <div class="sales-figure-container">
-    <div class="row no-gutters mb-lg-4 mb-2">
-        <div class="col-lg-3 col">
+    <div class="row no-gutters mb-lg-4 mb-3">
+        <div class="col-lg-3 col mb-3 mb-lg-0">
             <div class="sales-figure sales-figure__today">
                 <h4 class="h6 mb-0 font-weight-normal" style="min-width: 200px">
                     Total monthly sales:
@@ -42,18 +42,18 @@
     <div class="row no-gutters sales-figure mb-3">
         <h4 class="h5 font-weight-normal mb-3">Sales</h4>
         <div class="bg-white p-3">
-            <div class="row no-gutters">
-                <div class="mb-2 d-inline-block">
+            <div class="row no-gutters mb-3">
+                <div class="mb-2 d-inline-block col-lg-auto">
                     <label class="sales-figure__label d-block d-lg-inline-block">From Date: </label>
                     <input (click)="fromPicker.open()" class="form-control form-control-sm d-inline-block" [ngStyle]="{'max-width': isMobileSize? '100%' : '200px'}" [(ngModel)]="fromDate" [matDatepicker]="fromPicker" [min]="last60dayDate" [max]="maxDate" />
                     <mat-datepicker #fromPicker startView="month" [startAt]="fromDate" (opened)="openCalendar()"></mat-datepicker>
                 </div>
-                <div class="mb-2 d-inline-block">
+                <div class="mb-2 d-inline-block col-lg-auto">
                     <label class="sales-figure__label d-block d-lg-inline-block">To Date: </label>
                     <input (click)="toPicker.open()" class="form-control form-control-sm d-inline-block" [ngStyle]="{'max-width': isMobileSize? '100%' : '200px'}" [(ngModel)]="toDate" [matDatepicker]="toPicker" [min]="fromDate" [max]="maxDate" />
                     <mat-datepicker #toPicker startView="month" [startAt]="toDate" (opened)="openCalendar()"></mat-datepicker>
                 </div>
-                <div class="d-flex align-items-center">
+                <div class="d-flex align-items-center col-lg-auto">
                     <button class="btn btn-sm btn-controller" [disabled]="salesLoading.isRunning()" (click)="getSalesBetweenDates()">Search</button>
                 </div>
                 <!-- <div class="float-right col text-right">
