@@ -4,6 +4,11 @@
 
 - v1.0.1070                                 -
 ---------------------------------------------
+- 2021-01-24                                -
+---------------------------------------------
+.: WSM: Task: Diagram of total delivery fee (monthly + daily) (WSM-270)
+
+---------------------------------------------
 - 2021-01-23                                -
 ---------------------------------------------
 .: WSM: Task: Show monthly sales (WSM-271)
